# opengl

./: CMakeLists.txt  Camera.cpp  Camera.h  GUI.cpp  GUI.h  GUIRender.cpp  GUIRender.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  main.cpp
Shaders/: frag.glsl  gui_frag.glsl  gui_vertex.glsl  light_frag.glsl  light_vertex.glsl  vertex.glsl
